objects/GOAL__c.object
<CustomObject>
    <description>The objects holds the goal data from optymyze</description>
    <fields>
        <fullName>Annual_Margin_Goal__c</fullName>
        <label>Annual Margin Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Sales_Goal__c</fullName>
        <label>Annual Sales Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Actual__c</fullName>
        <label>Margin Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Attainment__c</fullName>
        <label>Margin Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Goal__c</fullName>
        <label>Margin Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Record ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Actual__c</fullName>
        <label>Sales Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Attainment__c</fullName>
        <label>Sales Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Goal__c</fullName>
        <label>Sales Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_ID__c</fullName>
        <label>Sales Rep ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>GOAL</label>
    <nameField>
        <label>GOAL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GOALs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>